# biodm

./: .buildinfo  .env  .gitignore  README.md  advanced_use.html  automated_login.py  compose.example.yml  compose.test.yml  compose.yml  developer_manual.html  genindex.html  getting_started.html  index.html  licence.html  makefile  objects.inv  py-modindex.html  pyproject.toml  requirements-mini.txt  requirements.txt  search.html  searchindex.js  user_manual.html
.doctrees/: advanced_use.doctree  developer_manual.doctree  environment.pickle  getting_started.doctree  index.doctree  licence.doctree  user_manual.doctree
.doctrees/biodm/: biodm.api.doctree  biodm.basics.doctree  biodm.basics.groupcontroller.doctree  biodm.basics.k8scontroller.doctree  biodm.basics.rootcontroller.doctree  biodm.basics.usercontroller.doctree  biodm.component.doctree  biodm.components.controllers.admincontroller.doctree  biodm.components.controllers.controller.doctree  biodm.components.controllers.doctree  biodm.components.controllers.resourcecontroller.doctree  biodm.components.controllers.s3controller.doctree  biodm.components.doctree  biodm.components.k8smanifest.doctree  biodm.components.services.dbservice.doctree  biodm.components.services.doctree  biodm.components.services.k8service.doctree  biodm.components.services.kcservice.doctree  biodm.components.services.s3service.doctree  biodm.components.table.doctree  biodm.config.doctree  biodm.doctree  biodm.error.doctree  biodm.exceptions.doctree  biodm.managers.dbmanager.doctree  biodm.managers.doctree  biodm.managers.k8smanager.doctree  biodm.managers.kcmanager.doctree  biodm.managers.s3manager.doctree  biodm.routing.doctree  biodm.schemas.doctree  biodm.schemas.error.doctree  biodm.schemas.group.doctree  biodm.schemas.k8sinstance.doctree  biodm.schemas.listgroup.doctree  biodm.schemas.refresh.doctree  biodm.schemas.upload.doctree  biodm.schemas.user.doctree  biodm.scope.doctree  biodm.tables.asso.doctree  (+15 more)
.doctrees/developer_manual/: advanced_use.doctree  demo.doctree  doc_endpoints.doctree  index.doctree  k8manifests.doctree  permissions.doctree  production.doctree  s3conf.doctree  table_schema.doctree  versioning.doctree
.github/workflows/: ci.yml  documentation.yml  pylint.yml
_sources/: developer_manual.rst.txt  getting_started.rst.txt  user_manual.rst.txt
_sources/biodm/: biodm.api.rst.txt  biodm.basics.groupcontroller.rst.txt  biodm.basics.k8scontroller.rst.txt  biodm.basics.rootcontroller.rst.txt  biodm.basics.rst.txt  biodm.basics.usercontroller.rst.txt  biodm.component.rst.txt  biodm.components.controllers.admincontroller.rst.txt  biodm.components.controllers.rst.txt  (+46 more)
biodm/: biodm.api.html  biodm.basics.groupcontroller.html  biodm.basics.html  biodm.basics.k8scontroller.html  biodm.basics.rootcontroller.html  biodm.basics.usercontroller.html  biodm.component.html  biodm.components.controllers.admincontroller.html  biodm.components.controllers.controller.html  biodm.components.controllers.html  biodm.components.controllers.resourcecontroller.html  biodm.components.controllers.s3controller.html  biodm.components.html  biodm.components.k8smanifest.html  biodm.components.services.dbservice.html  biodm.components.services.html  biodm.components.services.k8service.html  biodm.components.services.kcservice.html  biodm.components.services.s3service.html  biodm.components.table.html  biodm.config.html  biodm.error.html  biodm.exceptions.html  biodm.html  biodm.managers.dbmanager.html  biodm.managers.html  biodm.managers.k8smanager.html  biodm.managers.kcmanager.html  biodm.managers.s3manager.html  biodm.routing.html  biodm.schemas.error.html  biodm.schemas.group.html  biodm.schemas.html  biodm.schemas.k8sinstance.html  biodm.schemas.listgroup.html  biodm.schemas.refresh.html  biodm.schemas.upload.html  biodm.schemas.user.html  biodm.scope.html  biodm.tables.asso.html  (+15 more)
developer_manual/: advanced_use.html  demo.html  doc_endpoints.html  index.html  k8manifests.html  permissions.html  production.html  s3conf.html  table_schema.html  versioning.html
docker/: Dockerfile.biodm-test  Dockerfile.biodm-test-api  Dockerfile.biodm-test-runner  Dockerfile.keycloak-22.0_local-certs
docs/: advanced_use.rst  conf.py  configuration.rst  developer_manual.rst  getting_started.rst  index.rst  user_manual.rst
keycloak/: 3TR.json
minikube/: oauth2-proxy.yaml
src/: __init__.py  app.py  auth.py  config.py  errors.py  exceptions.py  requirements.txt  security.py  test.py  test_setup.py
src/example/: .env  app.py  config.py  pyproject.toml  requirements.txt
src/example/entities/controllers/: __init__.py  dataset.py  file.py  project.py  tag.py  visualization.py
src/example/entities/schemas/: __init__.py  dataset.py  file.py  project.py  tag.py  visualization.py
src/example/entities/tables/: __init__.py  asso.py  dataset.py  file.py  project.py  tag.py  visualization.py
src/example/manifests/: __init__.py  busybox.py  cellxgene.py  visualization.py
src/example/tests/: test_app.py
(+206 files in other folders)
