[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biodm"
description = "A fast and RESTful Data Management framework"
authors = [
  {name = "Etienne Jodry", email = "etienne.jodry@cnag.eu"},
]
dynamic = ["dependencies", "version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">= 3.11"
classifiers = [
  "Development Status :: 3 - Pre-Release",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU/AGPLv3",
]

[project.urls]
Repository = "https://github.com/bag-cnag/biodm.git"

[project.optional-dependencies]
kubernetes = ["kubernetes==29.0.0"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements/common.txt"]}
version = {attr = "biodm.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["*example*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "def __repr__",
]

[tool.mypy]
exclude = ["bak", "src/biodm/tests", "setup.py"]
warn_unreachable = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
disable_error_code = ["method-assign", "import-untyped"]

[tool.flake8]
max-line-length = 99
per-file-ignores="src/*__init__.py:F401"
